--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Horiseon</title>
 </head>
-
+<!--Navigation Bar-->
 <body>
     <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
@@ -24,7 +24,9 @@
             </ul>
         </nav>
     </header>
+    <!--Image of a team working on a marketing project-->
     <figure class="hero" alt="Team working on project in office meeting room">  </figure>
+    <!--Main section describing the three navigation points-->
     <main>
         <!-- table with notebook with writing, laptop, magnifying glass, cofee and pens -->
         <section class="main-Section" id="search-engine-optimization">
@@ -51,6 +53,7 @@
             </p>
         </section>
     </main>
+    <!--Side section of benefit descriptions-->
     <aside class="benefits"> 
         <section class="benefit-section" id="benefit-lead">
             <h3>Lead Generation</h3>
@@ -77,6 +80,7 @@
             </p>
         </section>
     </aside>
+    <!--Footer section containing trademark-->
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
